--- a/HabitsTracker/HabitsTracker/App.xaml
+++ b/HabitsTracker/HabitsTracker/App.xaml
@@ -3,6 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="HabitsTracker.App">
     <Application.Resources>
-
+        <ResourceDictionary>
+            <Color x:Key="MainBrown">#908181</Color>
+            <Color x:Key="MainGold">#FFD700</Color>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
