--- a/HabitsTracker/HabitsTracker/Views/MainPage.xaml
+++ b/HabitsTracker/HabitsTracker/Views/MainPage.xaml
@@ -63,7 +63,7 @@
                                         <control:CellDayView Text="{Binding Day}"
                                                              VerticalOptions="Center"
                                                              HorizontalOptions="Center"
-                                                             Command="{Binding Path=BindingContext.SelectADay, Source={x:Reference MainGridList}}"
+                                                             Command="{Binding Path=BindingContext.SelectADayCommand, Source={x:Reference MainGridList}}"
                                                              CommandParameter="{Binding .}"
                                                              ImageName="{Binding IsSelected, Converter={StaticResource boolToImageString}}" />
                                     </DataTemplate>
