--- a/HabitsTracker/HabitsTracker/Views/MainPage.xaml
+++ b/HabitsTracker/HabitsTracker/Views/MainPage.xaml
@@ -14,66 +14,76 @@
 
     <ContentPage.Content>
         <ContentView>
-
             <ScrollView>
-                <Grid x:Name="MainGridList"
-                      Padding="5"
-                      BindableLayout.ItemsSource="{Binding Months}">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="auto" />
-                        <RowDefinition Height="auto" />
-                    </Grid.RowDefinitions>
+                <Grid>
+                    <StackLayout VerticalOptions="Center"
+                                 IsVisible="{Binding IsLoading}"
+                                 HorizontalOptions="Center">
+                        <ActivityIndicator IsVisible="true"
+                                           IsRunning="{Binding IsLoading}" />
+                        <Label Text="Calendar Loading ..."
+                               FontSize="Large"
+                               FontAttributes="Bold"/>
+                    </StackLayout>
+                    <Grid x:Name="MainGridList"
+                          Padding="5"
+                          BindableLayout.ItemsSource="{Binding Months}">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="auto" />
+                            <RowDefinition Height="auto" />
+                        </Grid.RowDefinitions>
 
-                    <Label Grid.Row="0"
-                           Grid.ColumnSpan="12"
-                           HorizontalOptions="Center"
-                           FontAttributes="Bold"
-                           FontSize="Medium"
-                           Text="Habits Calendar" />
+                        <Label Grid.Row="0"
+                               Grid.ColumnSpan="12"
+                               HorizontalOptions="Center"
+                               FontAttributes="Bold"
+                               FontSize="Medium"
+                               Text="Habits Calendar" />
 
-                    <BindableLayout.ItemTemplate>
-                        <DataTemplate>
-                            <StackLayout Grid.Row="1"
-                                         Grid.Column="{Binding Order}">
-                                <Label Text="{Binding Abreviation}"
-                                       HorizontalOptions="Center"
-                                       FontAttributes="Bold"
-                                       FontSize="12"
-                                       TextColor="{StaticResource MainGold}" />
+                        <BindableLayout.ItemTemplate>
+                            <DataTemplate>
+                                <StackLayout Grid.Row="1"
+                                             Grid.Column="{Binding Order}">
+                                    <Label Text="{Binding Abreviation}"
+                                           HorizontalOptions="Center"
+                                           FontAttributes="Bold"
+                                           FontSize="12"
+                                           TextColor="{StaticResource MainGold}" />
 
-                                <StackLayout x:Name="ListForJan"
-                                             Spacing="2"
-                                             VerticalOptions="Center"
-                                             HorizontalOptions="Center"
-                                             BindableLayout.ItemsSource="{Binding Days}">
-                                    <BindableLayout.ItemTemplate>
-                                        <DataTemplate>
-                                            <control:CellDayView Text="{Binding Day}"
-                                                                 VerticalOptions="Center"
-                                                                 HorizontalOptions="Center"
-                                                                 Command="{Binding Path=BindingContext.SelectADayCommand, Source={x:Reference MainGridList}}"
-                                                                 CommandParameter="{Binding .}"
-                                                                 ImageName="{Binding IsSelected, Converter={StaticResource boolToImageString}}" />
-                                        </DataTemplate>
-                                    </BindableLayout.ItemTemplate>
+                                    <StackLayout x:Name="ListForJan"
+                                                 Spacing="2"
+                                                 VerticalOptions="Center"
+                                                 HorizontalOptions="Center"
+                                                 BindableLayout.ItemsSource="{Binding Days}">
+                                        <BindableLayout.ItemTemplate>
+                                            <DataTemplate>
+                                                <control:CellDayView Text="{Binding Day}"
+                                                                     VerticalOptions="Center"
+                                                                     HorizontalOptions="Center"
+                                                                     Command="{Binding Path=BindingContext.SelectADayCommand, Source={x:Reference MainGridList}}"
+                                                                     CommandParameter="{Binding .}"
+                                                                     ImageName="{Binding IsSelected, Converter={StaticResource boolToImageString}}" />
+                                            </DataTemplate>
+                                        </BindableLayout.ItemTemplate>
+                                    </StackLayout>
                                 </StackLayout>
-                            </StackLayout>
-                        </DataTemplate>
-                    </BindableLayout.ItemTemplate>
+                            </DataTemplate>
+                        </BindableLayout.ItemTemplate>
+                    </Grid>
                 </Grid>
             </ScrollView>
         </ContentView>
