--- a/HabitsTracker/App.xaml
+++ b/HabitsTracker/App.xaml
@@ -3,6 +3,7 @@
     x:Class="HabitsTracker.App"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:convertor="clr-namespace:HabitsTracker.Converters"
     xmlns:local="clr-namespace:HabitsTracker">
     <Application.Resources>
         <ResourceDictionary>
@@ -10,6 +11,7 @@
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
             </ResourceDictionary.MergedDictionaries>
+             <convertor:BoolToImageNameConverter x:Key="BoolToImageString" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
