--- a/HabitsTracker/Resources/Styles/Colors.xaml
+++ b/HabitsTracker/Resources/Styles/Colors.xaml
@@ -4,8 +4,11 @@
 
     <!--  Note: For Android please see also Platforms\Android\Resources\values\colors.xml  -->
 
-     <Color x:Key="MainBrown">#908181</Color>
-     <Color x:Key="MainGold">#FFD700</Color>
+    <Color x:Key="MainBrown">#908181</Color>
+    <Color x:Key="MainGold">#FFD700</Color>
+
+    <Color x:Key="BackgroundLight">#FFFFFF</Color>
+	<Color x:Key="BackgroundDark">#2E2E2E</Color>
 
     <Color x:Key="Primary">#512BD4</Color>
     <Color x:Key="PrimaryDark">#ac99ea</Color>
