Changes:  - add database for the application  - use database, add migrations, and repository for accessing database

--- a/HabitsTracker/AppShell.xaml
+++ b/HabitsTracker/AppShell.xaml
@@ -7,8 +7,13 @@
     Shell.FlyoutBehavior="Disabled">
 
     <ShellContent
-        Title="Home"
         ContentTemplate="{DataTemplate local:HomePage}"
         Route="HomePage" />
+
+    <ShellContent
+        ContentTemplate="{DataTemplate local:MainPage}"
+        Route="MainPage" />
+
+ 
 
 </Shell>
